took pws out of notebook

--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -27,9 +27,9 @@
    ],
    "source": [
     "try:\n",
-    "    cnx = mysql.connector.connect(user='u179344db1', password='0.q71kn469pp',\n",
-    "                                  host='e115240-mysql.services.easyname.eu',\n",
-    "                                  database='u179344db1')\n",
+    "    cnx = mysql.connector.connect(user='USERNAME', password='PASSWORD',\n",
+    "                                  host='HOSTNAME',\n",
+    "                                  database='DBNAME = USERNAME')\n",
     "    print(\"connection successfully established.\")\n",
     "except mysql.connector.Error as err:\n",
     "  if err.errno == errorcode.ER_ACCESS_DENIED_ERROR:\n",
