--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -27,10 +27,11 @@
    ],
    "source": [
     "try:\n",
-    "    cnx = mysql.connector.connect(user='USERNAME', password='PASSWORD',\n",
-    "                                  host='HOSTNAME',\n",
-    "                                  database='DBNAME = USERNAME')\n",
+    "    cnx = mysql.connector.connect(user='u179344db1', password='0.q71kn469pp',\n",
+    "                                  host=' e115240-mysql.services.easyname.eu',\n",
+    "                                  database='u179344db1')\n",
     "    print(\"connection successfully established.\")\n",
+    "    \n",
     "except mysql.connector.Error as err:\n",
     "  if err.errno == errorcode.ER_ACCESS_DENIED_ERROR:\n",
     "    print(\"Invalid user credentials.\")\n",
@@ -38,8 +39,7 @@
     "    print(\"Database does not exist\")\n",
     "  else:\n",
     "    print(err)\n",
-    "else:\n",
-    "  cnx.close()"
+    "    cnx.close()"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
