parameterized the db connection details for testing

--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -2,19 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e115240-mysql.services.easyname.eu\n",
+      "u179344db1\n",
+      "u179344db1\n",
+      "0.q71kn469pp\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "import mysql.connector\n",
-    "from mysql.connector import errorcode"
+    "from mysql.connector import errorcode\n",
+    "from pathlib import Path\n",
+    "import json\n",
+    "import logging\n",
+    "\n",
+    "\n",
+    "currentWorkingDirectory = os.path.abspath('')\n",
+    "secretFile = json.load(open(currentWorkingDirectory+'/config/secrets.json'))\n",
+    "dbhost = secretFile['dbhost']\n",
+    "dbname = secretFile['db']\n",
+    "dbuser = secretFile['dbuser']\n",
+    "dbpass = secretFile['dbpass']\n",
+    "print(dbhost)\n",
+    "print(dbname)\n",
+    "print(dbuser)\n",
+    "print(dbpass)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -27,9 +54,9 @@
    ],
    "source": [
     "try:\n",
-    "    cnx = mysql.connector.connect(user='u179344db1', password='0.q71kn469pp',\n",
-    "                                  host=' e115240-mysql.services.easyname.eu',\n",
-    "                                  database='u179344db1')\n",
+    "    cnx = mysql.connector.connect(user=dbuser, password=dbpass,\n",
+    "                                  host=dbhost,\n",
+    "                                  database=dbname)\n",
     "    print(\"connection successfully established.\")\n",
     "    \n",
     "except mysql.connector.Error as err:\n",
