fixed stupidass mistake 909494309

--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -2,22 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e115240-mysql.services.easyname.eu\n",
-      "u179344db1\n",
-      "u179344db1\n",
-      "0.q71kn469pp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import mysql.connector\n",
@@ -32,16 +21,12 @@
     "dbhost = secretFile['dbhost']\n",
     "dbname = secretFile['db']\n",
     "dbuser = secretFile['dbuser']\n",
-    "dbpass = secretFile['dbpass']\n",
-    "print(dbhost)\n",
-    "print(dbname)\n",
-    "print(dbuser)\n",
-    "print(dbpass)"
+    "dbpass = secretFile['dbpass']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
