added a random deep quote function

--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "praw.models.listing.generator.ListingGenerator"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -163,11 +163,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Come join the fun! https://i.redd.it/a3ux7p9w14r41.gif\n",
-      "It sucks https://i.redd.it/a773987slkr41.gif\n",
-      "How tf did he do that? https://i.redd.it/agjzxl7ztkr41.gif\n",
-      "Lovin the view https://i.redd.it/47rbryagolr41.jpg\n",
-      "Keep dreaming, fellas. https://i.redd.it/paqyw4uy2lr41.jpg\n"
+      "Warning: May lead to abstinence https://i.redd.it/scqbyrb7rsu41.png\n",
+      "ASTRONOMIA COFFIN DANCE IS YOUR MARCH 2020 MEME OF THE MONTH https://i.imgur.com/X9SDUVN.gif\n",
+      "Did I miss anyone? https://i.redd.it/gkn1xu1cfcv41.gif\n",
+      "Watch where you're going https://i.redd.it/f0zkm19k9dv41.gif\n",
+      "The real battle royale https://i.redd.it/nvnb098z3cv41.jpg\n"
      ]
     }
    ],
@@ -175,6 +175,99 @@
     "for i in hot_memes:\n",
     "    print(i.title, i.url)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################\n",
+    "##### QUOTE API ######\n",
+    "######################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quote:The fact that one can lose one's sense of self in an ocean of tranquility does not mean that one's consciousness is immaterial or that it presided over the birth of the universe.\n",
+      "author:Sam Harris\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "url = ' https://opinionated-quotes-api.gigalixirapp.com/v1/quotes'\n",
+    "response = requests.get(url).json()\n",
+    "\n",
+    "quote = response['quotes'][0]['quote']\n",
+    "author = response['quotes'][0]['author']\n",
+    "print(f\"quote:{quote}\\nauthor:{author}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################\n",
+    "##### JOKE API #######\n",
+    "######################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jokeurl = 'https://icanhazdadjoke.com/api'\n",
+    "payload = {}\n",
+    "headers = {'Accept':'application/json'}\n",
+    "\n",
+    "response = requests.request(\"GET\", jokeurl, headers=headers, data=payload)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.@lindseygraham, who had zero in his presidential run before dropping out in disgrace- saying the most horrible things about me on Fox News.'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#############################\n",
+    "##### TRUMP QUOTE API #######\n",
+    "#############################\n",
+    "\n",
+    "trumpurl = 'https://api.tronalddump.io/random/quote'\n",
+    "response = requests.get(trumpurl).json()\n",
+    "response['value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -186,9 +279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pahiebot-env",
    "language": "python",
-   "name": "python3"
+   "name": "pahiebot-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -200,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
