added a function to tell a random joke

--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -225,15 +225,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jokeurl = 'https://icanhazdadjoke.com/api'\n",
+    "jokeurl = 'https://sv443.net/jokeapi/v2/joke/Miscellaneous?blacklistFlags=racist,sexist'\n",
     "payload = {}\n",
     "headers = {'Accept':'application/json'}\n",
     "\n",
-    "response = requests.request(\"GET\", jokeurl, headers=headers, data=payload)"
+    "response = requests.request(\"GET\", jokeurl, headers=headers, data=payload).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'category': 'Miscellaneous',\n",
+       " 'type': 'twopart',\n",
+       " 'flags': {'nsfw': False,\n",
+       "  'religious': False,\n",
+       "  'political': False,\n",
+       "  'racist': False,\n",
+       "  'sexist': False},\n",
+       " 'setup': 'Two guys walked into a bar.',\n",
+       " 'delivery': 'The third guy ducked.',\n",
+       " 'id': 170,\n",
+       " 'error': False}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two guys walked into a bar. The third guy ducked.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response['setup'], response['delivery'])"
    ]
   },
   {
