--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "connection successfully established.\n"
+      "connection to db successfully established.\n"
      ]
     }
    ],
@@ -53,8 +53,8 @@
     "    cnx = mysql.connector.connect(user=dbuser, password=dbpass,\n",
     "                                  host=dbhost,\n",
     "                                  database=dbname)\n",
-    "    print(\"connection successfully established.\")\n",
-    "    \n",
+    "    print(\"connection to db successfully established.\")\n",
+    "\n",
     "except mysql.connector.Error as err:\n",
     "  if err.errno == errorcode.ER_ACCESS_DENIED_ERROR:\n",
     "    print(\"Invalid user credentials.\")\n",
@@ -67,7 +67,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error:  1062 (23000): Duplicate entry '12345' for key 'PRIMARY'\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "# insert a userid to usertable table example\n",
+    "#\n",
+    "def insert_user(uid):\n",
+    "    query = \"INSERT INTO users VALUES (%s)\"\n",
+    "    args = (uid, )\n",
+    "\n",
+    "    try:\n",
+    "        cursor = cnx.cursor()\n",
+    "        cursor.execute(query, args)\n",
+    "\n",
+    "        cnx.commit()\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(\"error: \", e)\n",
+    "\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        \n",
+    "insert_user(12345)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234\n",
+      "found user: 1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "# check if userid already exists\n",
+    "#\n",
+    "def find_user(uid):\n",
+    "    query = \"SELECT * FROM users WHERE uid=%s\"\n",
+    "    args = (uid, )\n",
+    "    \n",
+    "    try:\n",
+    "        cursor = cnx.cursor(buffered=True)\n",
+    "        cursor.execute(query, args)\n",
+    "        rows = cursor.fetchall()\n",
+    "        \n",
+    "        if len(rows) > 0:\n",
+    "            print(rows[0][0]) #fetchall() returns a list object\n",
+    "            print(f\"found user: {uid}\")\n",
+    "            \n",
+    "        else:\n",
+    "            print(f\"could not find userid: {uid}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "\n",
+    "\n",
+    "find_user(1234)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,14 +398,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#############################\n",
+    "##### FOAAS API #############\n",
+    "#############################"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#https://www.foaas.com/"
+   ]
   }
  ],
  "metadata": {
