setup the entire addfavourite function, this needs to be implemented in the pahiebot script now

--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -103,16 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1234\n",
-      "found user: 1234\n"
+      "starting operation: find_user\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -121,20 +130,21 @@
     "#\n",
     "def find_user(uid):\n",
     "    query = \"SELECT * FROM users WHERE uid=%s\"\n",
-    "    args = (uid, )\n",
-    "    \n",
+    "    args = (uid,)\n",
+    "\n",
     "    try:\n",
+    "        print(\"starting operation: find_user\")\n",
     "        cursor = cnx.cursor(buffered=True)\n",
     "        cursor.execute(query, args)\n",
     "        rows = cursor.fetchall()\n",
-    "        \n",
+    "\n",
     "        if len(rows) > 0:\n",
-    "            print(rows[0][0]) #fetchall() returns a list object\n",
-    "            print(f\"found user: {uid}\")\n",
-    "            \n",
+    "            #if user already exists in db return False\n",
+    "            return True\n",
     "        else:\n",
-    "            print(f\"could not find userid: {uid}\")\n",
-    "        \n",
+    "            #if user does not exist in db return False\n",
+    "            return False\n",
+    "\n",
     "    except Exception as e:\n",
     "        print(e)\n",
     "\n",
@@ -142,9 +152,255 @@
     "        cursor.close()\n",
     "\n",
     "\n",
+    "        \n",
     "find_user(1234)\n",
     "    \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting operation: find_soundfile\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_soundfile(soundfilename):\n",
+    "\n",
+    "    query = \"SELECT * FROM soundfiles WHERE file_name=%s\"\n",
+    "    args = (soundfilename,)\n",
+    "\n",
+    "    try:\n",
+    "        print(\"starting operation: find_soundfile\")\n",
+    "        cursor = cnx.cursor(buffered=True)\n",
+    "        cursor.execute(query, args)\n",
+    "        rows = cursor.fetchall()\n",
+    "\n",
+    "        if len(rows) > 0:\n",
+    "            #if user already exists in db return False\n",
+    "            soundfile_id = rows[0][0]\n",
+    "            return True\n",
+    "        else:\n",
+    "            #if user does not exist in db return False\n",
+    "            return False\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        \n",
+    "        \n",
+    "find_soundfile('autism')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting operation: get_soundfile_id\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_soundfile_id(soundfilename):\n",
+    "    query = \"SELECT * FROM soundfiles WHERE file_name=%s\"\n",
+    "    args = (soundfilename,)\n",
+    "\n",
+    "    try:\n",
+    "        print(\"starting operation: get_soundfile_id\")\n",
+    "        cursor = cnx.cursor(buffered=True)\n",
+    "        cursor.execute(query, args)\n",
+    "        rows = cursor.fetchall()\n",
+    "\n",
+    "        if len(rows) > 0:\n",
+    "            #if user already exists in db return False\n",
+    "            soundfile_id = rows[0][0]\n",
+    "            return soundfile_id\n",
+    "        else:\n",
+    "            #if user does not exist in db return False\n",
+    "            return -1\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "        \n",
+    "get_soundfile_id('autism')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting operation: find_keyword_for_user\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_keyword_for_user(user_id, hotkeyword):\n",
+    "    query = \"SELECT * FROM user_soundfiles WHERE user_id=%s AND soundkeyword=%s\"\n",
+    "    args = (user_id, hotkeyword)\n",
+    "\n",
+    "    try:\n",
+    "        print(\"starting operation: find_keyword_for_user\")\n",
+    "        cursor = cnx.cursor(buffered=True)\n",
+    "        cursor.execute(query, args)\n",
+    "        rows = cursor.fetchall()\n",
+    "\n",
+    "        if len(rows) > 0:\n",
+    "            #if user already exists in db return False\n",
+    "            return True\n",
+    "        else:\n",
+    "            #if user does not exist in db return False\n",
+    "            return False\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "\n",
+    "\n",
+    "        \n",
+    "find_keyword_for_user(286615413381529601, 'ho')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_user_soundfile(user_id, soundfile_id, soundkeyword):\n",
+    "    query = \"INSERT INTO user_soundfiles VALUES (%s, %s, %s)\"\n",
+    "    args = (user_id, soundfile_id, soundkeyword)\n",
+    "\n",
+    "    try:\n",
+    "        cursor = cnx.cursor()\n",
+    "        cursor.execute(query, args)\n",
+    "\n",
+    "        cnx.commit()\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(\"error: \", e)\n",
+    "\n",
+    "    finally:\n",
+    "        cursor.close()\n",
+    "    \n",
+    "insert_user_soundfile(286615413381529601, 2, 'asmon1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting operation: find_user\n",
+      "starting operation: find_soundfile\n",
+      "starting operation: find_keyword_for_user\n",
+      "user does not exist, please use signup first\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "# insert new soundfile and hotkeyword to the user_soundfiles function\n",
+    "#\n",
+    "\n",
+    "#realid = 286615413381529601\n",
+    "wrongid = 213442134213412423\n",
+    "\n",
+    "#tbd: \n",
+    "# check if user exists\n",
+    "# if user exists check if entered soundfile exists in soundfiles table\n",
+    "# if soundfile exists check if hotkeyword is not too long\n",
+    "# if all criteria is fullfilled add the row to the database\n",
+    "\n",
+    "def addfavourite(userid, soundfilename, hotkeyword):\n",
+    "    \n",
+    "    userExists = find_user(userid)\n",
+    "    soundfileExists = find_soundfile(soundfilename)\n",
+    "    hotkeywordForUserExists = find_keyword_for_user(userid, hotkeyword)\n",
+    "    \n",
+    "    if userExists == False:\n",
+    "        print(\"user does not exist, please use signup first\")\n",
+    "        \n",
+    "    elif soundfileExists == False:\n",
+    "        print(\"Pahie does not know this soundfile. Please make sure to enter an existing soundfile!\")\n",
+    "        \n",
+    "    elif len(hotkeyword) >= 20:\n",
+    "        print(\"Please enter a shorter keyword!\")\n",
+    "        \n",
+    "    elif hotkeywordForUserExists == True:\n",
+    "        print(\"You already used this hotkeyword! Please enter a different one.\")\n",
+    "        \n",
+    "        \n",
+    "    else:\n",
+    "        user_id = userid\n",
+    "        soundfile_id = get_soundfile_id(soundfilename)\n",
+    "        hotkeyword\n",
+    "        print(user_id,\",\", soundfile_id, \",\", hotkeyword)\n",
+    "        \n",
+    "        #insert row here!\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "        \n",
+    "addfavourite(wrongid, 'nissel-krimsekt', 'asmon2')"
    ]
   },
   {
