added markify function

--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gerd/Documents/Python/venvs/pahiebot-env/lib/python3.8/site-packages/mysql/connector/abstracts.py:130: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if group is 'connector_python':\n",
+      "/home/gerd/Documents/Python/venvs/pahiebot-env/lib/python3.8/site-packages/mysql/connector/optionfiles.py:98: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if group is 'connector_python':\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import mysql.connector\n",
@@ -425,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,9 +458,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Version 7.1.0 of praw is outdated. Version 7.1.3 was released 1 day ago.\n"
+     ]
+    }
+   ],
    "source": [
     "reddit = praw.Reddit(client_id = use_script, \n",
     "                     client_secret = client_secret,\n",
@@ -460,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -472,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +500,7 @@
        "praw.models.listing.generator.ListingGenerator"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -501,11 +520,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: May lead to abstinence https://i.redd.it/scqbyrb7rsu41.png\n",
-      "ASTRONOMIA COFFIN DANCE IS YOUR MARCH 2020 MEME OF THE MONTH https://i.imgur.com/X9SDUVN.gif\n",
-      "Did I miss anyone? https://i.redd.it/gkn1xu1cfcv41.gif\n",
-      "Watch where you're going https://i.redd.it/f0zkm19k9dv41.gif\n",
-      "The real battle royale https://i.redd.it/nvnb098z3cv41.jpg\n"
+      "please come play minecraft with us https://streamable.com/g1zy8a\n",
+      "JANUARY 2021 MEME OF THE MONTH NOMINATIONS AND SEEDING https://www.reddit.com/r/dankmemes/comments/len01g/january_2021_meme_of_the_month_nominations_and/\n",
+      "Brother, become one of us https://i.imgur.com/UCJlth4.gifv\n",
+      "If you're reading this Ted, I want an explanation https://i.redd.it/9vzk9bhcv0g61.gif\n",
+      "It be true https://i.redd.it/nog9nhjcs0g61.png\n"
      ]
     }
    ],
@@ -516,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,15 +546,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "quote:The fact that one can lose one's sense of self in an ocean of tranquility does not mean that one's consciousness is immaterial or that it presided over the birth of the universe.\n",
-      "author:Sam Harris\n"
+      "quote:It is curious that while good people go to great lengths to spare their children from suffering, few of them seem to notice that the one (and only) guaranteed way to prevent all the suffering of their children is not to bring those children into existence in the first place.\n",
+      "author:David Benatar\n"
      ]
     }
    ],
@@ -552,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -584,20 +603,23 @@
     {
      "data": {
       "text/plain": [
-       "{'category': 'Miscellaneous',\n",
+       "{'error': False,\n",
+       " 'category': 'Misc',\n",
        " 'type': 'twopart',\n",
+       " 'setup': \"What's the difference between a school bus and a cactus?\",\n",
+       " 'delivery': 'A cactus keeps the little pricks on the outside.',\n",
        " 'flags': {'nsfw': False,\n",
        "  'religious': False,\n",
        "  'political': False,\n",
        "  'racist': False,\n",
-       "  'sexist': False},\n",
-       " 'setup': 'Two guys walked into a bar.',\n",
-       " 'delivery': 'The third guy ducked.',\n",
-       " 'id': 170,\n",
-       " 'error': False}"
+       "  'sexist': False,\n",
+       "  'explicit': True},\n",
+       " 'id': 188,\n",
+       " 'safe': False,\n",
+       " 'lang': 'en'}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,6 +690,42 @@
    "source": [
     "#https://www.foaas.com/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'satz mit tz war wohl nitz?'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "pattern = re.compile('[gkx]')\n",
+    "char_to_replace = {'g': 'd',\n",
+    "                   'k': 't',\n",
+    "                   'x': 'tz'\n",
+    "                   }\n",
+    "test = \"satz mit x war wohl nix?\"\n",
+    "\n",
+    "re.sub(pattern,lambda x: char_to_replace[x.group(0)], test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -686,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
