added object detection function

--- a/implementation-tests.ipynb
+++ b/implementation-tests.ipynb
@@ -722,6 +722,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#############################\n",
+    "##### OBJECT DETECTION#######\n",
+    "#############################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import tensorflow as tf\n",
+    "from google.protobuf import text_format\n",
+    "import matplotlib.pyplot as plt\n",
+    "from google.transit import gtfs_realtime_pb2\n",
+    "import urllib.request\n",
+    "\n",
+    "config_file = './setup/SSD_Mobilenet_v3/ssd_mobilenet_v3_large_coco_2020_01_14.pbtxt'\n",
+    "frozen_model = './setup/SSD_Mobilenet_v3/frozen_inference_graph.pb'\n",
+    "labels = './setup/SSD_Mobilenet_v3/labels.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
